<?xml version="1.0"?>
<package format="2">
  <name>adeye_scenario_managers</name>
  <version>0.0.0</version>
  <description>The adeye_scenario_managers package</description>


  <maintainer email="adeye@todo.todo">adeye</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>autoware_msgs</depend>
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>


  <export>

  </export>
</package>
