<?xml version="1.0"?>
<package format="2">
  <name>adeye_scenario_managers</name>
  <version>0.0.0</version>
  <description>The adeye_scenario_managers package</description>

  <maintainer email="adeye@md.kth.se">AD-EYE team</maintainer>
  <license>See AD-EYE_Core/LICENSE.md</license>
  <url type="website">http://www.adeye.se</url>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>autoware_msgs</depend>
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>


  <export>  </export>
</package>
